--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /laskarit/viikko2/maksukortti/.coverage
 /laskarit/viikko2/unicafe/htmlcov
 /laskarit/viikko2/unicafe/src/tests/__pycache__
+/src/__pycache__
