--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,5 @@
 /laskarit/viikko2/maksukortti/.coverage
 /laskarit/viikko2/unicafe/htmlcov
 /laskarit/viikko2/unicafe/src/tests/__pycache__
-/src/__pycache__
+/projekti/src/__pycache__
+/projekti/src/ui/__pycache__
