--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /laskarit/viikko2/unicafe/src/tests/__pycache__
 /projekti/src/__pycache__
 /projekti/src/ui/__pycache__
+/projekti/src/repository/__pycache__
