--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 /projekti/src/ui/__pycache__
 /projekti/src/repository/__pycache__
 /projekti/src/tests/__pycache__
+/projekti/src/ui/graphic/__pycache__
