--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 /projekti/src/repository/__pycache__
 /projekti/src/tests/__pycache__
 /projekti/src/ui/graphic/__pycache__
+/projekti/.pytest_cache
