--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@
 /projekti/src/tests/__pycache__
 /projekti/src/ui/graphic/__pycache__
 /projekti/.pytest_cache
+/projekti/htmlcov
+.coverage
+/projekti/src/data/database.sqlite
