--- a/.gitignore
+++ b/.gitignore
@@ -15,5 +15,6 @@
 /projekti/htmlcov
 .coverage
 /projekti/src/data/database.sqlite
+/projekti/src/data/test-database.sqlite
 /projekti/src/services/__pycache__
 /projekti/src/ui/graphic/.pytest_cache
